--- a/src/main/resources/assets/ana/lang/en_us.json
+++ b/src/main/resources/assets/ana/lang/en_us.json
@@ -32,6 +32,7 @@
   "item.ana.golden_shovel": "Golden Shovel",
   "item.ana.golden_hoe": "Golden Hoe",
 
+  "block.ana.silver_ore": "Silver Ore",
   "item.ana.silver_ingot": "Silver Ingot",
   "item.ana.raw_silver": "Raw Silver",
   "item.ana.silver_shortsword": "Silver Shortsword",
@@ -40,6 +41,7 @@
   "item.ana.silver_shovel": "Silver Shovel",
   "item.ana.silver_hoe": "Silver Hoe",
 
+  "block.ana.platinum_ore": "Platinum Ore",
   "item.ana.platinum_ingot": "Platinum Ingot",
   "item.ana.raw_platinum": "Raw Platinum",
   "item.ana.platinum_shortsword": "Platinum Shortsword",
@@ -48,6 +50,8 @@
   "item.ana.platinum_shovel": "Platinum Shovel",
   "item.ana.platinum_hoe": "Platinum Hoe",
 
+  "block.ana.mithral_ore_high": "§bMithral Ore",
+  "block.ana.mithral_ore": "§bDeepslate Mithral Ore",
   "item.ana.mithral_ingot": "§bMithral Ingot",
   "item.ana.raw_mithral": "§bRaw Mithral",
   "item.ana.mithral_shortsword": "§bMithral Shortsword",
@@ -56,6 +60,7 @@
   "item.ana.mithral_shovel": "§bMithral Shovel",
   "item.ana.mithral_hoe": "§bMithral Hoe",
 
+  "block.ana.adamantine_ore": "§cDeepslate Adamantine Ore",
   "item.ana.adamantine_ingot": "§cAdamantine Ingot",
   "item.ana.raw_adamantine": "§cRaw Adamantine",
   "item.ana.adamantine_shortsword": "§cAdamantine Shortsword",
