--- a/TODO.txt
+++ b/TODO.txt
@@ -96,7 +96,7 @@ Sell:
 
 Coins:
 Copper Crow
-Silver Sentinel (Worth 10 Copper Pieces)
+Silver Shield (Worth 10 Copper Pieces)
 Gold Griffon (Worth 10 Silver Pieces)
 Platinum Dragon (Worth 10 Gold Pieces)
 
@@ -107,8 +107,6 @@ When players select a class, they get 500
 stat points to allocate, in groups of 5, 
 up to a maximum of 150. 
 Player stats cap at 200.
-Attributes increase by 25% for weapons 
-and skills the player are proficient in. 
 Attributes can be increased by passing
 skill checks or leveling up.
 Only passing a skill check that is higher then
@@ -466,7 +464,7 @@ Relentless Rage
 While raging, if you would take a fatal wound, and drop to 0 HP, You make a CON Resistance Check (CR 100),
 If it passes, you drop to 1 HP instead.
 Each time this ability procs, the CR increases by 50.
-CR can be reset to 100 by completing a short rest.
+CR can be reset to 100 by completing a rest.
 
 - LVL 12 - 
 
@@ -930,10 +928,188 @@ Nature
 Tempest
 Trickery
 War
+Your choice grants you domain spells and other features.
+Domain spells do not count towards your maximum spell cap.
 
 - LVL 2 -
 
 Channel Divinity
+You gain the ability Turn Undead as well as an additional ability based on your Divine Domain.
+Some Divine Domains grant additional abilities by level up.
+After using any Channel Divinity, that Ability is disabled until you rest.
+Pressing SHIFT + <ClassAbility1Key> cycles between Channel Divinity abilities.
+
+Turn Undead
+By presenting a holy symbol, you can press <ClassAbility1Key> to utter a prayer to attempt to turn undead.
+All undead that can see or hear you within a 10 block radius must succeed a Wisdom Resistance Check (CR your spell CR)
+If a creature fails, they are turned for the next minute or until they take damage.
+Turned is identical to Frieghtend.
+
+- LVL 5 -
+
+Destroy Undead
+When a undead fails it's Resistance Check against Turn Undead. They are instantly destroyed based on the table below.
+You gain no AXP for destroying enemies in this way.
+--------------------------
+     Turn Undead Table
+--------------------------
+Level ---       CR     ---
+ 5-7  --- 1/2 or lower ---
+ 8-10 --- 1 or lower   ---
+11-14 --- 2 or lower   ---
+15-19 --- 4 or lower   ---
+  20  --- 8 or lower   ---
+  
+- LVL 10 -
+
+Divine Intervention
+When absolutely nessesary, you can press <ClassAbility2Key> to call on your Deity to intervene on your behalf. there is a LVL/100 chance that your Deity will heed your call.
+If the check passes, your Deity will cast a LVL 9 cleric spell, determined by the domain.
+This ability has a cooldown of 1 real life day.
+
+- LVL 20 -
+
+Divine Favor
+Your Divine Intervention check always passes.
+
+-- Divine Domains --
+
+- Knowledge Domain-Unique Abilities -
+
+------------------------------------------
+         Knowledge Domain Spells
+------------------------------------------
+LVL ---                Spells          ---   
+ 1  ---         Command, Identify      ---
+ 3  ---         Augury, Suggestion     ---
+ 5  ---  Nondetection, Speak with Dead --- 
+ 7  ---       Arcane Eye, Confusion    ---
+ 9  ---       Legend Lore, Scrying     ---
+ 
+- LVL 1 -
+
+Blessings of Knowledge
+You learn 2 new languages of your choice. You also become proficient in 2 of the following: Arcana, History, Nature, Religion
+
+- LVL 2 -
+
+Channel Divinity - Knowledge of the Ages
+You can press <ClassAbility1Key> to tap into a divine well of knowledge. You choose 1 Skill or Tool, for the next 20 minutes, you have Proficiency in that Skill or Tool.
+
+- LVL 6 -
+
+Channel Divinity - Read Thoughts
+You can press <ClassAbility1Key> to attempt to read a creatures thoughts, you can then use your access to the creatures mind to command it.
+The ability has a range of 18 blocks, and you must be looking at the target.
+The target makes a Wisdom Resistane Check (CR: Your Spell CR) if they succeed, you cannot use this ability until you sleep through a night.
+If the target fails, you can read it's surface thoughts as long as if it's within 18 blocks of you, this effect lasts for 1 minute.
+During the 1 minute period, you can end the effect to cast Suggestion on the target without expending a spell slot, the target automatically fails it's
+Resistance Check.
+If used on a player, you can see their current HP, Hunger level, AC, Breath (if underwater), Status Effects, and Sanity. you can still casst Suggestion as normal.
+
+- LVL 8 -
+
+Potent Spellcasting
+Your Spell Power is doubled if it is a positive value.
+
+- LVL 17 -
+
+Visions of the Past
+You can press <ClassAbility2Key> call up visions of the past that relate to an object you hold or your immediate surroundings. This ability cannot be used again until after a rest.
+Object Reading
+When using this ability holding an item, you meditate for 30 seconds, after 30 seconds are up, you learn who the previous owner of the item was. How they got the item, and how they lost it. Moving before the 30 seconds are up cancels the ability.
+Area Reading
+When not holding an item, you meditate for 30 seconds, targeting the chunk your in and the chunks adjacent to it, after 30 seconds are up, you learn about any NPCS or players who has been in this area, and if any important events have happened in this area, going back up to 10 + (WIS MODIFIER) days, ordered by most recent to most dated.
+
+- Life Domain-Unique Abilities -
+
+-----------------------------------------------
+                  Life Domain Spells
+-----------------------------------------------
+LVL ---                Spells               ---   
+ 1  ---         Bless, Cure Wounds          ---
+ 3  --- Lesser Restoration, Spirital Weapon ---
+ 5  ---      Beacon of Hope, Revivify       --- 
+ 7  ---   Death Ward, Guardian of Faith     ---
+ 9  ---     Mass Cure Wounds, Raise Dead    ---
+ 
+- LVL 1 -
+
+Bonus Proficiency
+You gain Proficiency in Heavy Armor.
+
+Disciple of Life
+Whenever you cast a healing spell that restores Hit Points to a creature and is LVL 1 or higher, add 2 + (Spell Level) to the total amount restored.
+
+- LVL 2 -
+
+Channel Divinity - Preserve Life
+You can press <ClassAbility1Key> to restore 5 * LVL HP among any number of creatures within 10 blocks of you. 
+
+- LVL 6 -
+
+Blessed Healer
+When you cast a healing spell that restores Hit Points to a creature and is LVL 1 or higher, heal 2 + (Spell Level) HP.
+
+- LVL 8 -
+
+Divine Strike 1
+Attacking deals an additional 4 Radiant damage.
+This ability has a 10 second cooldown.
+
+- LVL 14 -
+
+Divine Strike 2
+Attacking deals an additional 8 Radiant damage.
+This ability has a 10 second cooldown.
+This ability overwrites Divine Strike 1.
+
+- LVL 17 -
+
+Supreme Healer
+You double the amount healed when using a healing spell.
+
+- Light Domain-Unique Abilities -
+
+-----------------------------------------------
+                  Light Domain Spells
+-----------------------------------------------
+LVL ---                Spells               ---   
+ 1  ---     Burning Hands, Faerie Fire      ---
+ 3  ---    Flaming Sphere, Scorching Ray    ---
+ 5  ---         Daylight, Fireball          --- 
+ 7  ---   Guardian of Faith, Wall of Fire   ---
+ 9  ---       Flame Strike, Scrying         ---
+ 
+ - LVL 1 -
+
+Bonus Cantrip
+You get Light added to your known spells, this spell dosen't count towards your max cantrips.
+
+Warding Flare
+You can press <ClassAbility2Key> to blind a enemy your looking at within 5 blocks of you for 5 seconds, allowing you to get away. You can use this ability a number of times equal to your WIS MOD. (Minimum of 1.) 
+
+
+- LVL 2 -
+
+Channel Divinity - Radiance of the Dawn
+Presenting your holy symbol, you can press <ClassAbility1Key> to dispel any magical darkness within 10 blocks of you. Additionally, each hostile creature within 10 blocks of you must make a CON Resistance Check. Each creature that fails takes 11 + Cleric Level Radiant Damage, and takes half as much on a successful save. Any creature behind cover is unaffected.
+
+- LVL 6 -
+
+Improved Flare
+Your Warding Flare now has a range of 10 Blocks.
+
+
+- LVL 8 -
+
+Potent Spellcasting
+Your Spell Power is doubled if it is a positive value.
+
+- LVL 17 -
+
+Corona of Light
+You can now press SHIFT + <ClassAbility2Key> to make yourself glow radiantly. You glow with a light level of 15 while active, and any creatures within 10 blocks of you have disadvantage on Resistance Checks for spells that deal Radiant or Fire damage.
 
 
 --- Druid ---
